--- a/adminside/templates/allservices.html
+++ b/adminside/templates/allservices.html
@@ -97,6 +97,7 @@
                                                 <th>About</th>
                                                 <th>First Description</th>
                                                 <th>Second Description</th>
+                                                <th>Link</th>
                                                 <th>Image</th>
                                                 <th>Edit</th>
                                                 <th>Delete</th>
@@ -109,6 +110,7 @@
                                                 <td>{{i.about}}</td>
                                                 <td>{{i.description_first}}</td>
                                                 <td>{{i.description_second}}</td>
+                                                <td>{{i.link}}</td>
                                                 <td><img src="{{i.image.url}}" style="height:100px; width:100px"></td>
                                                 <td><a href="editServices/{{i.id}}"> <button type="submit" class="btn btn-cyan btn-sm">Edit</button></a></td>
                                                 <td><a href="deleteServices/{{i.id}}"><button type="submit" class="btn btn-danger btn-sm">Delete</button></a></td>
