--- a/adminside/templates/editservices.html
+++ b/adminside/templates/editservices.html
@@ -127,6 +127,12 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
+                                        <label for="link" class="col-sm-3 text-right control-label col-form-label">Link:</label>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="link" id="link" placeholder="Link" value="{{service.link}}">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
                                         <label for="image" class="col-sm-3 text-right control-label col-form-label">Service Image:</label>
                                         <div class="col-sm-6">
                                             <input type="file" class="form-control" name="image" id="image">
