--- a/website/templates/ceo.html
+++ b/website/templates/ceo.html
@@ -61,7 +61,7 @@
 
     <!-- Start Breadcrumb
     ============================================= -->
-    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/17.jpg' %});">
+    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/1.png' %});">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 thumb">
-                    <img src="{% static 'assets/img/advisor/2.jpg' %}" alt="Thumb">
+                    <img src="{% static 'assets/img/team/vinod.png' %}" width="500px;" alt="Thumb">
                     <div class="desc">
                         <h4>Vinod Sonava</h4>
                         <span>CEO & Founder</span>
