--- a/adminside/templates/editportfolio.html
+++ b/adminside/templates/editportfolio.html
@@ -109,9 +109,15 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="image" class="col-sm-3 text-right control-label col-form-label">Image:</label>
+                                        <label for="image1" class="col-sm-3 text-right control-label col-form-label">Image:</label>
                                         <div class="col-sm-6">
-                                            <input type="file" class="form-control" name="image" id="image" required>
+                                            <input type="file" class="form-control" name="image1" id="image1" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="image2" class="col-sm-3 text-right control-label col-form-label">Image:</label>
+                                        <div class="col-sm-6">
+                                            <input type="file" class="form-control" name="image2" id="imag2" required>
                                         </div>
                                     </div>
                                 </div>
