--- a/adminside/templates/edittechnology.html
+++ b/adminside/templates/edittechnology.html
@@ -121,9 +121,15 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="benefit" class="col-sm-3 text-right control-label col-form-label">Benefit:</label>
+                                        <label for="image1" class="col-sm-3 text-right control-label col-form-label">Benefit:</label>
                                         <div class="col-sm-6">
-                                           <textarea class="form-control" name="benefit" id="benefit" placeholder="Second Description" required>{{technology.benefits}}</textarea>
+                                            <input type="file" class="form-control" name="image1" id="image1" placeholder="First Image" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="image2" class="col-sm-3 text-right control-label col-form-label">Benefit:</label>
+                                        <div class="col-sm-6">
+                                            <input type="file" class="form-control" name="image2" id="image2" placeholder="Second Image" required>
                                         </div>
                                     </div>
                                 </div>
