--- a/website/templates/golang.html
+++ b/website/templates/golang.html
@@ -67,7 +67,7 @@
 
     <!-- Start Breadcrumb
     ============================================= -->
-    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/21.jpg' %});">
+    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/2.png' %});">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -84,58 +84,45 @@
 
     <!-- Start Asp.net development
     ============================================= -->
+    {% for i in golang %}
     <div class="about-area default-padding">
         <div class="container">
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
+                        <img src="{{i.image1.url}}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
-                        <h2>GOLANG Development</h2>
-                        <p>
-                          We have an experience and expert team to take care of GOLANG development. Our best and expert developers have succeeded in creating the most difficult applications in GOLANG. We have been successful in creating websites, web applications, applications and everything in GOLANG.
-                        </p>
-                        <p>
-                            We work on various different frameworks, libraries and models of GOLANG and our expert team takes care of every analysis. We remain fully focused on the satisfaction of our clients and the seriousness of the project, so that we can complete our work smoothly.
-                        </p>
-                         <p>
-                             Our team breaks through each observatory and moves forward and keeps working in a systematic and analyzed way, which gives you an idea of which direction your project is going and your vision is clear.
-                         </p>
-
+                        <h2>{{i.name}}</h2>
+                        <p>{{i.description_first}}</p>
                     </div>
                 </div>
 
             </div>
         </div>
     </div>
+    {% endfor %}
     <!-- End Asp.net development -->
 
     <!-- Start Asp.net development
     ============================================= -->
+    {% for i in golang %}
     <div class="about-area default-padding">
         <div class="container">
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
+                         <img src="{{i.image2.url}}" alt="Thumb" height="483px;">
                     </div>
                     <div class="col-md-6 info">
-                       <p>
-                        Go is a procedural programming language. Fast languages like C, are difficult to work with and not safe. Compiling speed, dependencies and runtime errors are vast.
-                       </p>
-                        <p>
-                            It is a key feature of go. Go excels in giving a lot of control over memory allocation and has dramatically reduced latency in the most recent versions of the garbage collector.
-                        </p>
-                      <p>
-                          Because Go language is an effort to combine the ease of programming of an interpreted, dynamically typed language with the efficiency and safety of a statically typed, compiled language. It also aims to be modern, with support for networked and multicore computing.
-                      </p>
+                        <p>{{i.description_second}}</p>
                     </div>
                 </div>
 
             </div>
         </div>
     </div>
+    {% endfor %}
     <!-- End Asp.net development -->
 
 
@@ -145,9 +132,6 @@
         <div class="container">
             <div class="row">
                 <div class="about-info">
-                    <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
-                    </div>
                     <div class="col-md-6 info">
                         <div id="featured-courses" class="featured-courses-area left-details default-padding">
                          <div class="container">
@@ -159,7 +143,7 @@
                                      <div class="thumb">
                                         </div>
                                   </div>
-                        <div class="col-md-6 info">
+                        <div class="col-md-12 info">
                             <h2>
                                 <a href="#">BENEFITS OF GOLANG</a>
                             </h2>
