--- a/website/templates/web_footer.html
+++ b/website/templates/web_footer.html
@@ -5,7 +5,7 @@
                 <div class="f-items">
                     <div class="col-md-4 item">
                         <div class="f-item">
-                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
+                            <img src="{% static 'assets/img/LOGO-01.png' %}" alt="Logo">
                              <p>
                                 Way To Code Technologies is young and dynamic company. We believe that information technology is necessity of the 21st century, where every thing now going to develop on international level. Way To Code Technologies, built Android applications for wide domain areas and industries like Business, Fitness, E-commerce, and Sales Force. Our expert team members provide the best services for your organization. Your work & time is precious for us & we ensure it is built by our web designing and development experts.
                             </p>
